[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "2.31.0"
bs4 = "0.0.1"
lxml = "4.9.3"
flask = "3.0.0"
flask-cors = "4.0.0"
sqlalchemy = "2.0.23"
pytelegrambotapi = "4.14.0"
psycopg2 = "2.9.9"
sqlalchemy-utils = "0.41.1"
bcrypt = "4.1.2"
python-socketio = "5.10.0"
gevent = "23.9.1"
eventlet = "0.33.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"